--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,22 @@
 body{
-    background-color:#0a0a23;;
+    background-color:#0a0a23;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-#image{
+img{
     width: 50%;
-    height: auto;
-    margin: auto;
-    max-width: 100%;
+    margin: 0 auto;
     display: block;
     padding: 20px;
+
+}
+#image{
+    max-width:100%;
+    height: auto;
+    
 }
 #title{
-    text-align: center;
+    text-align:center;
     color: #ffffff;
 }
 
@@ -20,16 +24,16 @@ body{
     background-color:#eeeeee;
     text-align: center;
     padding: 0px;
-    margin: 20px auto;
+    margin: 20px 15px;
     max-width: 100%;
     align-items: center;
+    border-radius: 5px ;
 }
 
 
 #img-caption{
 
     color:rgb(0, 0, 0);
-    border:1px solid black;
     border:none;
 
 }
